# haskell-preserves

./: README.md  preserves.cabal
src/: Preserves.hs
src/Preserves/: Syrup.hs
src/Preserves/Syrup/: Decode.hs  Encode.hs
src/Preserves/Text/: Parse.hs
tests/: Main.hs
