cabal-version:       2.2
name:                preserves
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zenhack/haskell-preserves
license:             Apache-2.0
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2021 Ian Denhardt
category:            Codec
build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   main
  location: https://github.com/zenhack/haskell-preserves

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base >=4.12 && <5
    , zenhack-prelude ^>=0.1
    , bytestring
    , containers
    , data-fix ^>=0.3.1
    , text
    , binary ^>=0.8.8
  default-language:    Haskell2010

library
  import: shared-opts
  hs-source-dirs:      src
  exposed-modules:
      Preserves
    , Preserves.Syrup
    , Preserves.Syrup.Encode
    , Preserves.Syrup.Decode
test-suite tests
  import: shared-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
